--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    externalNativeBuild {
+    /*externalNativeBuild {
         cmake {
             path "CMakeLists.txt"
         }
+    }*/
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
     }
+
 }
 
 dependencies {
